--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@ s0.parentNode.insertBefore(s1,s0);
                         <ul>
                             <li>Gaming (primarily simulation games)</li>
                             <li>Tech reviews and updates</li>
-                            <li>AFO journey documentation</li>
                             <li>Lifestyle content</li>
                         </ul>
                     </li>
@@ -331,7 +330,6 @@ s0.parentNode.insertBefore(s1,s0);
                 <p>Currently Installed and Active:</p>
                 <ul>
                     <li>Farming Simulator 2025</li>
-                    <li>X-Plane 12</li>
                 </ul>
                 <p>Also Own (Currently Not Installed):</p>
                 <ul>
@@ -341,6 +339,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <li>Cities: Skylines</li>
                     <li>Planet Coaster</li>
                     <li>X-Plane 11</li>
+                    <li>X-Plane 12</li>
                 </ul>
                 <p>All games are played through Steam, focusing primarily on simulation games.</p>
             </div>
@@ -421,25 +420,6 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </div>
 
-        <!-- X-Plane Content -->
-        <div class="faq-item">
-            <button class="faq-question">
-                What do you do in X-Plane 12?
-                <span class="faq-icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>In X-Plane 12, I focus on:</p>
-                <ul>
-                    <li>Virtual flying experiences</li>
-                    <li>Different aircraft exploration</li>
-                    <li>Various airports and routes</li>
-                    <li>Flight simulation challenges</li>
-                    <li>Weather condition flying</li>
-                </ul>
-                <p>Watch my streams to see which aircraft I'm currently flying!</p>
-            </div>
-        </div>        
-
         <!-- Website Technical Details -->
         <div class="faq-item">
             <button class="faq-question">
@@ -457,12 +437,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (43.2%)</li>
-                            <li>CSS (29.8%)</li>
-                            <li>HTML (27.0%)</li>
+                            <li>JavaScript (43.4%)</li>
+                            <li>CSS (29.7%)</li>
+                            <li>HTML (26.9%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 3th, 2025 11:26:37 AM EST</li>
+                    <li>Last Updated: March 7th, 2025 9:53:56 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -489,17 +469,13 @@ s0.parentNode.insertBefore(s1,s0);
                         <ul>
                             <li>Right-click saving disabled</li>
                             <li>Image dragging prevented</li>
-                            <li>Screenshot prevention measures</li>
                             <li>Mobile long-press save disabled</li>
                             <li>Image download blocking</li>
                         </ul>
                     </li>
                     <li>Print Prevention:
                         <ul>
-                            <li>Print commands blocked (Ctrl+P, ⌘+P)</li>
-                            <li>Print Screen key disabled</li>
-                            <li>Browser print function blocked</li>
-                            <li>PDF conversion prevented</li>
+                            <li>Print shows a blank screen</li>
                         </ul>
                     </li>
                 </ul>
@@ -614,7 +590,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 177</p>
+        <p><span>Battery Charge Cycles:</span> 179</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -660,7 +636,6 @@ s0.parentNode.insertBefore(s1,s0);
                 <li><a href="https://www.nimh.nih.gov/health/topics/attention-deficit-hyperactivity-disorder-adhd" target="_blank">Attention Deficit Hyperactivity Disorder (ADHD)</a></li>
                 <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders" target="_blank">Anxiety Disorder</a></li>
                 <li><a href="https://www.ninds.nih.gov/health-information/disorders/hydrocephalus" target="_blank">Hydrocephalus</a></li>
-                <li><a href="https://www.ninds.nih.gov/health-information/disorders/epilepsy-and-seizures" target="_blank">Epilepsy (Stress Seizures)</a></li>
                 <li><a href="https://www.nimh.nih.gov/health/topics/obsessive-compulsive-disorder-ocd" target="_blank">Obsessive-Compulsive Disorder (OCD)</a></li>
                 <li><a href="https://www.nimh.nih.gov/health/topics/post-traumatic-stress-disorder-ptsd" target="_blank">Post-Traumatic Stress Disorder (PTSD)</a></li>
                 <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3070692/" target="_blank">Idiopathic Toe Walking</a></li>
