--- a/html/merchandise.html
+++ b/html/merchandise.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchandise - Bus Army Dude Profile</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ai-features.css">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="merchandise.css">
-    <link rel="stylesheet" href="colorblind-modes.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/ai-features.css">
+    <link rel="stylesheet" href="CSS/settings.css">
+    <link rel="stylesheet" href="CSS/merchandise.css">
     <meta http-equiv="refresh" content="300">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
@@ -51,7 +50,7 @@
     <header>
         <div class="header-content">
             <h1>Merchandise</h1>
-            <button class="home-button" onclick="window.location.href='index.html'">Home</button>
+            <button class="home-button" onclick="window.location.href='HTML/index.html'">Home</button>
         </div>
     </header>
 
@@ -76,11 +75,10 @@
     </footer>
 
     <!-- JavaScript files -->
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="settings.js"></script>
-    <script src="merchandise.js"></script> <!-- This will handle product/category logic -->
-    <script src="ai-chatbot.js"></script>
+    <script src="JS/common.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/ai-features.js"></script>
+    <script src="JS/settings.js"></script>
+    <script src="JS/merchandise.js"></script> <!-- This will handle product/category logic -->
 </body>
 </html>
