--- a/html/settings.html
+++ b/html/settings.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ai-features.css">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="colorblind-modes.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/ai-features.css">
+    <link rel="stylesheet" href="CSS/settings.css">
 
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
@@ -133,16 +132,16 @@
                 </div>
             </div>
 
-            <a href="index.html" class="back-link" tabindex="0" aria-label="Back to Profile">← Back to Profile</a>
+            <a href="HTML/index.html" class="back-link" tabindex="0" aria-label="Back to Profile">← Back to Profile</a>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
         <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
-        <a href="privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
-        <a href="terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
-        <a href="accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
+        <a href="HTML/privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
+        <a href="HTML/terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
+        <a href="HTML/accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
     </footer>
 
     <!-- Cookie Consent Banner -->
@@ -152,10 +151,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="settings.js"></script>
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="ai-chatbot.js"></script>
+    <script src="JS/settings.js"></script>
+    <script src="JS/common.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/ai-features.js"></script>
 </body>
 </html>
