--- a/html/cookies.html
+++ b/html/cookies.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Policy - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ai-features.css">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="cookies.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/ai-features.css">
+    <link rel="stylesheet" href="CSS/settings.css">
+    <link rel="stylesheet" href="CSS/cookies.css">
     
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
@@ -61,22 +61,22 @@
         <section id="manage-cookies">
             <h2>Managing Cookies</h2>
             <p>You can manage your cookie preferences through your browser settings. Please note that disabling essential cookies may affect the functionality of the website.</p>
-            <button onclick="window.location.href='settings.html'" aria-label="Go to cookie settings">Manage Cookies</button>
+            <button onclick="window.location.href='HTML/settings.html'" aria-label="Go to cookie settings">Manage Cookies</button>
         </section>
     </main>
 
     <footer>
         <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
-        <a href="privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
-        <a href="terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
-        <a href="accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
+        <a href="HTML/privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
+        <a href="HTML/terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
+        <a href="HTML/accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
     </footer>
 
     <!-- Scripts -->
-    <script src="settings.js"></script>
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="ai-chatbot.js"></script>
+    <script src="JS/settings.js"></script>
+    <script src="JS/common.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/ai-features.js"></script>
+    <script src="JS/ai-chatbot.js"></script>
 </body>
 </html>
