--- a/html/terms-of-service.html
+++ b/html/terms-of-service.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Bus Army Dude">
     <title>Terms of Service - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="terms.css">
-     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ai-features.css">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="colorblind-modes.css">
+    <link rel="stylesheet" href="CSS/terms.css">
+     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/ai-features.css">
+    <link rel="stylesheet" href="CSS/settings.css">
     <meta http-equiv="refresh" content="300">
     
      <!-- Google tag (gtag.js) -->
@@ -56,7 +55,7 @@
             <p>As a user, you agree not to misuse the website or attempt to infringe upon its security. All activities carried out on this website are your responsibility.</p>
 
             <h2>4. Privacy Policy</h2>
-            <p>We respect your privacy and are committed to protecting your personal information. Please review our <a href="privacy-policy.html">Privacy Policy</a> for more details.</p>
+            <p>We respect your privacy and are committed to protecting your personal information. Please review our <a href="HTML/privacy-policy.html">Privacy Policy</a> for more details.</p>
 
             <h2>5. Limitation of Liability</h2>
             <p>We are not liable for any damages or losses arising from the use of this website. Your use of this website is at your own risk.</p>
@@ -68,11 +67,10 @@
             <p>If you have any questions or concerns about these Terms of Service, feel free to contact us via the contact form on the website.</p>
         </section>
     </div>
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="settings.js"></script>
+    <script src="JS/common.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/ai-features.js"></script>
+    <script src="JS/settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
-    <script src="ai-chatbot.js"></script>
 </body>
 </html>
