--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Privacy Policy for Bus Army Dude's Profile">
     <title>Privacy Policy - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="privacy.css"> <!-- Link to your site's CSS -->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ai-features.css">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="colorblind-modes.css">
+    <link rel="stylesheet" href="CSS/privacy.css"> <!-- Link to your site's CSS -->
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/ai-features.css">
+    <link rel="stylesheet" href="CSS/settings.css">
+
     <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
@@ -90,11 +90,10 @@
         </section>
     </main>
 
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="settings.js"></script>
+    <script src="JS/common.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/ai-features.js"></script>
+    <script src="JS/settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
-    <script src="ai-chatbot.js"></script>
 </body>
 </html>
