--- a/merchandise.html
+++ b/merchandise.html
@@ -50,7 +50,7 @@
     <header>
         <div class="header-content">
             <h1>Merchandise</h1>
-            <button class="home-button" onclick="window.location.href='HTML/index.html'">Home</button>
+            <button class="home-button" onclick="window.location.href='index.html'">Home</button>
         </div>
     </header>
 
