--- a/index.html
+++ b/index.html
@@ -583,13 +583,13 @@ s0.parentNode.insertBefore(s1,s0);
         <p><span>Price:</span> $1,067.49</p>
         <p><span>Date Released:</span> September 20, 2024</p>
         <p><span>Date Bought:</span> November 08, 2024</p>
-        <p><span>OS Version:</span> iOS 18.4 (22E5216h)</p>
+        <p><span>OS Version:</span> iOS 18.4 (22E5222f)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 179</p>
+        <p><span>Battery Charge Cycles:</span> 185</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
