--- a/index.html
+++ b/index.html
@@ -176,16 +176,17 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </section>
         
-        <!-- TikTok Shoutouts Section -->
-        <div class="shoutouts-section section">
-            <div id="tiktok-shoutouts">
-                <h2>TikTok Creator Shoutouts</h2>
-                <p id="tiktok-last-updated-timestamp"></p>
-            </div>
-            <div class="creator-grid">
-                <!-- Cards will be dynamically generated here -->
-            </div>
-        </div>
+         <!-- TikTok Shoutouts Section -->
+  <div class="shoutouts-section section">
+      <div id="tiktok-shoutouts">
+          <h2>TikTok Creator Shoutouts</h2>
+          <p id="tiktok-last-updated-timestamp"></p>
+      </div>
+      <div class="creator-grid">
+          <!-- Cards will be dynamically generated here -->
+      </div>
+      <div class="unavailable-message" style="display: none;"></div>
+  </div>
         
         <!-- Instagram Shoutouts Section -->
         <div class="shoutouts-section section">
