--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ s0.parentNode.insertBefore(s1,s0);
         <h1>Bus Army Dude</h1>
         <img src="check.png" alt="Verified" class="verified">
     </div>
-    <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
+    <p>POLITICAL PARTY: Republican</p>
 </div>
         
        <!-- Social Links Section -->
@@ -438,12 +439,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (43.4%)</li>
-                            <li>CSS (29.7%)</li>
-                            <li>HTML (26.9%)</li>
+                            <li>JavaScript (41.7%)</li>
+                            <li>CSS (31.1%)</li>
+                            <li>HTML (27.2%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 7th, 2025 9:53:56 AM EST</li>
+                    <li>Last Updated: March 13th, 2025 9:28:32 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -517,7 +518,7 @@ s0.parentNode.insertBefore(s1,s0);
                         </ul>
                     </li>
                 </ul>
-                <p>Last Security Update: January 28th, 2025 20:11:11 UTC</p>
+                <p>Last Security Update: January 28th, 2025 4:11:11 PM EST</p>
             </div>
         </div>
 
@@ -546,7 +547,7 @@ s0.parentNode.insertBefore(s1,s0);
                         </ul>
                     </li>
                 </ul>
-                <p>Last Updated: January 28th, 2025 20:11:11 UTC</p>
+                <p>Last Updated: January 28th, 2025 4:11:11 PM EST</p>
             </div>
         </div>
 
@@ -591,7 +592,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 185</p>
+        <p><span>Battery Charge Cycles:</span> 189</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
