--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="instagram-creator-grid">
                 <!-- Instagram creator cards will be dynamically generated here -->
             </div>
+            <div class="unavailable-message" style="display: none;"></div>
         </div>
 
         <!-- YouTube Shoutouts Section -->
@@ -209,6 +210,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="youtube-creator-grid">
                 <!-- YouTube creator cards will be dynamically generated here -->
             </div>
+            <div class="unavailable-message" style="display: none;"></div>
         </div>
         
         <!-- Useful Links Section -->
