--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
                 <h2>Instagram Creator Shoutouts</h2>
-                <p class="last-updated"><span id="instagram-last-updated-timestamp">N/A</span></p>
+                <p id="instagram-last-updated-timestamp"></p>
             </div>
             <div class="instagram-creator-grid">
                 <!-- Instagram creator cards will be dynamically generated here -->
@@ -205,7 +205,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="youtube-shoutouts">
                 <h2>YouTube Creator Shoutouts</h2>
-                <p id="lastUpdatedYouTube"></p>
+                <p id="youtube-last-updated-timestamp"></p>
             </div>
             <div class="youtube-creator-grid">
                 <!-- YouTube creator cards will be dynamically generated here -->
