--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ s0.parentNode.insertBefore(s1,s0);
       <div class="creator-grid">
           <!-- Cards will be dynamically generated here -->
       </div>
-      <div class="unavailable-message" style="display: none;"></div>
+      <div class="tiktok-unavailable-message" style="display: none;"></div>
   </div>
         
         <!-- Instagram Shoutouts Section -->
@@ -198,7 +198,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="instagram-creator-grid">
                 <!-- Instagram creator cards will be dynamically generated here -->
             </div>
-            <div class="unavailable-message" style="display: none;"></div>
+            <div class="instaagram-unavailable-message" style="display: none;"></div>
         </div>
 
         <!-- YouTube Shoutouts Section -->
@@ -210,7 +210,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="youtube-creator-grid">
                 <!-- YouTube creator cards will be dynamically generated here -->
             </div>
-            <div class="unavailable-message" style="display: none;"></div>
+            <div class="youtube-unavailable-message" style="display: none;"></div>
         </div>
         
         <!-- Useful Links Section -->
