--- a/index.html
+++ b/index.html
@@ -291,6 +291,26 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="events-container" id="eventsContainer"></div>
     </div>
 </section>
+
+<div class="business-info">
+  <h2 class="business-name">Your Business Name</h2>
+  <p class="contact-info">Contact: <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
+
+  <!-- Business Hours Section -->
+  <div id="hours-container" class="hours-container">
+    <!-- Dynamic content goes here (rendered via JS) -->
+  </div>
+
+  <!-- Holiday Notification -->
+  <div id="holiday-alert" class="holiday-alert" style="display: none;">
+    <p>Holiday: <span id="holiday-name"></span> - Special hours today: <span id="holiday-hours"></span></p>
+  </div>
+
+  <!-- Open/Closed Status -->
+  <p class="status">Status: <span id="open-status"></span></p>
+  <p class="timezone-note">(Times displayed in your local timezone)</p>
+</div>
+
         
         <div class="faq-section">
     <h2>Frequently Asked Questions</h2>
