--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- Business Hours Section -->
     <div id="hours-container" class="hours-container">
-        <!-- Dynamic content will be rendered here -->
+        <!-- Dynamic content will be rendered here by JavaScript -->
     </div>
 
     <!-- Holiday Notification -->
