--- a/index.html
+++ b/index.html
@@ -710,6 +710,6 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="version.js"></script>
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
-    <script src="ai-chatbot.js"></script>
+    <script src="business-hours.js"></script>
 </body>
 </html>                
