--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@ s0.parentNode.insertBefore(s1,s0);
         <h2 class="business-name">Your Business Name</h2>
         <p class="contact-info">Contact: <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
 
+        <!-- User Timezone Display -->
+        <p class="timezone">Your current timezone: <span id="user-timezone"></span></p>
+
         <!-- Business Hours Section -->
         <div id="hours-container" class="hours-container">
             <!-- Dynamic content will be rendered here by JavaScript -->
