--- a/index.html
+++ b/index.html
@@ -294,10 +294,13 @@ s0.parentNode.insertBefore(s1,s0);
 
 <div class="business-info">
         <h2 class="business-name">Your Business Name</h2>
-        <p class="contact-info">Contact: <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
+        <p class="contact-info"><strong>Contact:</strong> <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
 
         <!-- User Timezone Display -->
-        <p class="timezone">Your current timezone: <span id="user-timezone"></span></p>
+        <p class="timezone"><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
+
+        <!-- Hours Title -->
+        <h3 class="hours-title">Business Hours</h3>
 
         <!-- Business Hours Section -->
         <div id="hours-container" class="hours-container">
@@ -306,14 +309,13 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Holiday Notification -->
         <div id="holiday-alert" class="holiday-alert" style="display: none;">
-            <p>Holiday: <span id="holiday-name"></span> - Special hours today: <span id="holiday-hours"></span></p>
+            <p><strong>Holiday:</strong> <span id="holiday-name"></span> - Special hours today: <span id="holiday-hours"></span></p>
         </div>
 
         <!-- Open/Closed Status -->
-        <p class="status">Status: <span id="open-status"></span></p>
+        <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
         <p class="timezone-note">(Times displayed in your local timezone)</p>
     </div>
-
         
         <div class="faq-section">
     <h2>Frequently Asked Questions</h2>
