--- a/index.html
+++ b/index.html
@@ -293,14 +293,14 @@ s0.parentNode.insertBefore(s1,s0);
 </section>
 
 <div class="business-info">
-        <h2 class="business-name">Your Business Name</h2>
+        <h2 class="business-name"><strong>Your Business Name</strong></h2>
         <p class="contact-info"><strong>Contact:</strong> <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
 
         <!-- User Timezone Display -->
         <p class="timezone"><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
 
         <!-- Hours Title -->
-        <h3 class="hours-title">Business Hours</h3>
+        <h3 class="hours-title"><strong>Business Hours</strong></h3>
 
         <!-- Business Hours Section -->
         <div id="hours-container" class="hours-container">
