--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ s0.parentNode.insertBefore(s1,s0);
 </section>
 
 <div class="business-info">
-        <h2 class="business-name"><strong>Your Business Name</strong></h2>
-        <p class="contact-info"><strong>Contact:</strong> <a href="mailto:info@yourbusiness.com">info@yourbusiness.com</a></p>
+        <h2 class="business-name"><strong>Bus Army Dude's Merch Store</strong></h2>
+        <p class="contact-info"><strong>Contact:</strong> <a href="mailto:rkritzar53@gmail.com">rkritzar53@gmail.com</a></p>
 
         <!-- User Timezone Display -->
         <p class="timezone"><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
