--- a/index.html
+++ b/index.html
@@ -293,29 +293,19 @@ s0.parentNode.insertBefore(s1,s0);
 </section>
 
 <div class="business-info">
-        <h2 class="business-name"><strong>Bus Army Dude's Merch Store</strong></h2>
-        <p class="contact-info"><strong>Contact:</strong> <a href="mailto:rkritzar53@gmail.com">rkritzar53@gmail.com</a></p>
+    <h1>Bus Army Dude's Merch Store</h1>
+    <p class="contact-info"><strong>Contact:</strong> <a href="mailto:busarmydude@gmail.com">busarmydude@gmail.com</a></p>    
+    <p><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
+    <h2>Business Hours</h2>
+    <div id="hours-container"></div>
 
-        <!-- User Timezone Display -->
-        <p class="timezone"><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
-
-        <!-- Hours Title -->
-        <h3 class="hours-title"><strong>Business Hours</strong></h3>
-
-        <!-- Business Hours Section -->
-        <div id="hours-container" class="hours-container">
-            <!-- Dynamic content will be rendered here by JavaScript -->
-        </div>
-
-        <!-- Holiday Notification -->
-        <div id="holiday-alert" class="holiday-alert" style="display: none;">
-            <p><strong>Holiday:</strong> <span id="holiday-name"></span> - Special hours today: <span id="holiday-hours"></span></p>
-        </div>
-
-        <!-- Open/Closed Status -->
-        <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
-        <p class="timezone-note">(Times displayed in your local timezone)</p>
+    <div id="holiday-alert">
+        <p><strong>Holiday:</strong> <span id="holiday-name"></span></p>
+        <p><strong>Special hours today:</strong> <span id="holiday-hours"></span></p>
     </div>
+
+    <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
+</div>
         
         <div class="faq-section">
     <h2>Frequently Asked Questions</h2>
