--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@ s0.parentNode.insertBefore(s1,s0);
     <h2>Business Hours</h2>
     <div id="hours-container"></div>
 
-    <div id="holiday-alert">
+    <!-- The holiday alert starts hidden -->
+    <div id="holiday-alert" style="display: none;">
         <p><strong>Holiday:</strong> <span id="holiday-name"></span></p>
         <p><strong>Special hours today:</strong> <span id="holiday-hours"></span></p>
     </div>
