--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff"/>
 
+    <!-- Light mode icon -->
+    <link rel="apple-touch-icon" media="(prefers-color-scheme: light)" href="/assets/light-icon/180.png">
+    
+    <!-- Dark mode icon -->
+    <link rel="apple-touch-icon" media="(prefers-color-scheme: dark)" href="/assets/dark-icon/180.png">
+
+    <!-- Default (fallback) icon -->
+    <link rel="apple-touch-icon" href="/assets/light-icon/180.png">
+
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json">
 
