--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 <!-- Default (fallback) icon -->
 <link rel="apple-touch-icon" href="/assets/light-icon/180.png">
 
+<!-- Additional sizes for better compatibility -->
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/light-icon/120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/light-icon/152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/light-icon/180.png">
+<link rel="apple-touch-icon" sizes="512x512" href="/assets/light-icon/512.png">
+
 <!-- Web App Manifest -->
 <link rel="manifest" href="/manifest.json">
 
