--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       gtag('config', 'G-E0RSQS1MS7');
     </script>
     
-    <!-- Favicons and Icons -->
+   <!-- Favicons and Icons -->
 <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
+
+<!-- Web App Manifest -->
 <link rel="manifest" href="/manifest.json" />
 
 <!-- Microsoft-specific configuration -->
@@ -41,6 +43,7 @@
 <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
 <meta name="theme-color" content="#ffffff"/>
 
+<!-- Apple Touch Icons -->
 <!-- Light mode icon -->
 <link rel="apple-touch-icon" media="(prefers-color-scheme: light)" href="/assets/light-icon/180.png">
 
@@ -53,11 +56,7 @@
 <!-- Additional sizes for better compatibility -->
 <link rel="apple-touch-icon" sizes="120x120" href="/assets/light-icon/120.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/assets/light-icon/152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/light-icon/180.png">
 <link rel="apple-touch-icon" sizes="512x512" href="/assets/light-icon/512.png">
-
-<!-- Web App Manifest -->
-<link rel="manifest" href="/manifest.json">
 
 <!-- Microsoft-specific configuration -->
 <meta name="browserconfig" content="/browserconfig.xml">
