--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ s0.parentNode.insertBefore(s1,s0);
         <p><strong>Special hours today:</strong> <span id="holiday-hours"></span></p>
     </div>
 
-    <p class="status"><strong>Status:</strong> <span id="open-status" class="open">Open</span></p>
+    <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
 </div>
         
         <div class="faq-section">
