--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ s0.parentNode.insertBefore(s1,s0);
         <p><strong>Special hours today:</strong> <span id="holiday-hours"></span></p>
     </div>
 
+    <div class="status-container">
     <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
 </div>
         
