--- a/index.html
+++ b/index.html
@@ -736,5 +736,7 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
+    <script src="region-config.js"></script>
+    <script src="improved-tiktok-shoutouts.js"></script>
 </body>
 </html>                
