--- a/index.html
+++ b/index.html
@@ -714,6 +714,7 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- Scripts -->
     <script src="common.js"></script>
+    <script src="globalSettings.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
