--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -90,6 +90,7 @@
     </main>
 
     <script src="common.js"></script>
+    <script src="globalSettings.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
