--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -69,6 +69,7 @@
         </section>
     </div>
     <script src="common.js"></script>
+    <script src="globalSettings.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
