--- a/settings.html
+++ b/settings.html
@@ -165,6 +165,7 @@
 
     <!-- Scripts -->
     <script src="settings.js"></script>
+    <script src="globalSettings.js"></script>
     <script src="common.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
