--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ s0.parentNode.insertBefore(s1,s0);
     
     <!-- Apple Watch Ultra 2 Section -->
     <div class="tech-item">
-        <i class="fa-solid fa-watch-apple"></i> Apple Watch Ultra 2</h3>
+        <h3><i class="fas fa-stopwatch"></i> Apple Watch Ultra 2</h3>
         <div class="tech-detail"><i class="fas fa-info-circle"></i><span>Model:</span> Apple Watch Ultra 2</div>
         <div class="tech-detail"><i class="fas fa-layer-group"></i><span>Material:</span> Titanium</div>
         <div class="tech-detail"><i class="fas fa-hdd"></i><span>Storage:</span> 64GB</div>
