--- a/index.html
+++ b/index.html
@@ -665,21 +665,54 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 
 
-        <!-- Disabilities Section -->
-        <div class="disabilities-section section">
-            <h2>Disabilities</h2>
-            <p>I have the following disabilities:</p>
-            <ul>
-                <li><a href="https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd" target="_blank">Autism Spectrum Disorder (ASD)</a></li>
-                <li><a href="https://www.nimh.nih.gov/health/topics/attention-deficit-hyperactivity-disorder-adhd" target="_blank">Attention Deficit Hyperactivity Disorder (ADHD)</a></li>
-                <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders" target="_blank">Anxiety Disorder</a></li>
-                <li><a href="https://www.ninds.nih.gov/health-information/disorders/hydrocephalus" target="_blank">Hydrocephalus</a></li>
-                <li><a href="https://www.nimh.nih.gov/health/topics/obsessive-compulsive-disorder-ocd" target="_blank">Obsessive-Compulsive Disorder (OCD)</a></li>
-                <li><a href="https://www.nimh.nih.gov/health/topics/post-traumatic-stress-disorder-ptsd" target="_blank">Post-Traumatic Stress Disorder (PTSD)</a></li>
-                <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3070692/" target="_blank">Idiopathic Toe Walking</a></li>
-            </ul>
-        </div>
-    </div>
+       <div class="disabilities-section section">
+    <h2><i class="fas fa-universal-access"></i> Disabilities</h2>
+    <p><i class="fas fa-info-circle"></i> I have the following disabilities:</p>
+    <ul>
+        <li>
+            <a href="https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd" target="_blank">
+                <i class="fas fa-brain"></i>
+                Autism Spectrum Disorder (ASD)
+            </a>
+        </li>
+        <li>
+            <a href="https://www.nimh.nih.gov/health/topics/attention-deficit-hyperactivity-disorder-adhd" target="_blank">
+                <i class="fas fa-head-side-brain"></i>
+                Attention Deficit Hyperactivity Disorder (ADHD)
+            </a>
+        </li>
+        <li>
+            <a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders" target="_blank">
+                <i class="fas fa-heartbeat"></i>
+                Anxiety Disorder
+            </a>
+        </li>
+        <li>
+            <a href="https://www.ninds.nih.gov/health-information/disorders/hydrocephalus" target="_blank">
+                <i class="fas fa-head-side-medical"></i>
+                Hydrocephalus
+            </a>
+        </li>
+        <li>
+            <a href="https://www.nimh.nih.gov/health/topics/obsessive-compulsive-disorder-ocd" target="_blank">
+                <i class="fas fa-sync-alt"></i>
+                Obsessive-Compulsive Disorder (OCD)
+            </a>
+        </li>
+        <li>
+            <a href="https://www.nimh.nih.gov/health/topics/post-traumatic-stress-disorder-ptsd" target="_blank">
+                <i class="fas fa-brain"></i>
+                Post-Traumatic Stress Disorder (PTSD)
+            </a>
+        </li>
+        <li>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3070692/" target="_blank">
+                <i class="fas fa-shoe-prints"></i>
+                Idiopathic Toe Walking
+            </a>
+        </li>
+    </ul>
+</div>
     
     <!-- Version Panel Section -->
 <div class="version-info-container">
