--- a/no-internet.html
+++ b/no-internet.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="no-internet.css">
 </head>
 <body>
+    <!-- Add the datetime header at the top -->
+    <div class="datetime-header">
+        Current Date and Time (UTC - YYYY-MM-DD HH:MM:SS formatted): 
+        <span id="current-datetime">2025-03-17 23:35:04</span>
+        <br>
+        Current User's Login: <span id="user-login">BusArmyDude</span>
+    </div>
+
     <div class="no-internet-container">
         <div class="header">No Internet Connection</div>
         
