--- a/accessibility-statement.html
+++ b/accessibility-statement.html
@@ -39,6 +39,15 @@
     <!-- Microsoft-specific configuration -->
     <meta name="browserconfig" content="/browserconfig.xml">
 </head>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/sw.js')
+                .then(() => console.log('Service Worker registered'))
+                .catch(err => console.log('Service Worker registration failed:', err));
+        });
+    }
+</script>    
 <body class="accessibility-statement-page">
     <div class="container">
         <section class="accessibility-statement">
@@ -77,5 +86,6 @@
     <script src="settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
     <script src="ai-chatbot.js"></script>
+    <script src="no-internet.js"></script>
 </body>
 </html>
