--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,6 +39,15 @@
     <!-- Microsoft-specific configuration -->
     <meta name="browserconfig" content="/browserconfig.xml">
 </head>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/sw.js')
+                .then(() => console.log('Service Worker registered'))
+                .catch(err => console.log('Service Worker registration failed:', err));
+        });
+    }
+</script>    
 <body>
     <main>
         <section class="privacy-policy">
@@ -96,5 +105,6 @@
     <script src="settings.js"></script>
     <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
     <script src="ai-chatbot.js"></script>
+    <script src="no-internet.js"></script>
 </body>
 </html>
