--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (41.7%)</li>
-                            <li>CSS (31.1%)</li>
-                            <li>HTML (27.2%)</li>
+                            <li>JavaScript (36.3%)</li>
+                            <li>CSS (37.5%)</li>
+                            <li>HTML (26.2%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 13th, 2025 9:28:32 AM EST</li>
+                    <li>Last Updated: March 18th, 2025 12:32:26 PM EST</li>
                 </ul>
             </div>
         </div>
@@ -618,7 +618,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $1,067.49</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 20, 2024</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> November 08, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E5222f)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E5232a)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -626,7 +626,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">100%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 189</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 197</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -660,7 +660,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $742.29</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> January 17, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 16, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5228e)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5238a)</div>
     </div>
 </div>
 
