--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
     
 <!-- Maintenance Mode Message -->
-<div id="maintenanceModeMessage" style="display: none; background-color: red; color: white; text-align: center; padding: 20px;">
-    <h2>We're Performing Some Upgrades!</h2>
+<div id="maintenanceModeMessage" style="display: none; background-color: var(--bg-color); color: var(--text-color); text-align: center; padding: 20px; border-left: 4px solid var(--accent-color); border-radius: 8px; box-shadow: 0 8px 20px var(--shadow-color);">
+    <h2 style="color: var(--accent-color);">We're Performing Some Upgrades!</h2>
     <p>
         Our website is currently undergoing scheduled maintenance to improve your experience. We’re making some big updates, so things will be smoother, faster, and even better when we're done.
     </p>
@@ -94,7 +94,6 @@ s0.parentNode.insertBefore(s1,s0);
     </p>
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
-
   <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
