--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
     
 <!-- Maintenance Mode Message -->
-<div id="maintenanceModeMessage" style="display: none; background-color: var(--bg-color); color: var(--text-color); text-align: center; padding: 20px; border-left: 4px solid var(--accent-color); border-radius: 8px; box-shadow: 0 8px 20px var(--shadow-color); margin: 20px;">
+<div id="maintenanceModeMessage" style="display: none; background-color: #333; color: var(--text-color); text-align: center; padding: 20px; border-left: 4px solid var(--accent-color); border-radius: 8px; box-shadow: 0 8px 20px var(--shadow-color); margin: 20px; border: 2px solid var(--accent-color);">
     <h2 style="color: var(--accent-color); font-family: 'Inter', sans-serif; font-size: 1.8em; margin-bottom: 10px;">We're Performing Some Upgrades!</h2>
     <p style="font-family: 'Roboto', sans-serif; font-size: 1.1em; line-height: 1.5; margin-bottom: 15px;">
         Our website is currently undergoing scheduled maintenance to improve your experience. We’re making some big updates, so things will be smoother, faster, and even better when we're done.
