--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
     
 <!-- Maintenance Mode Message -->
-<div id="maintenanceModeMessage" style="display: none; background-color: #333; color: var(--text-color); text-align: center; padding: 20px; border-left: 4px solid var(--accent-color); border-radius: 8px; box-shadow: 0 8px 20px var(--shadow-color); margin: 20px; border: 2px solid var(--accent-color);">
-    <h2 style="color: var(--accent-color); font-family: 'Inter', sans-serif; font-size: 1.8em; margin-bottom: 10px;">We're Performing Some Upgrades!</h2>
-    <p style="font-family: 'Roboto', sans-serif; font-size: 1.1em; line-height: 1.5; margin-bottom: 15px;">
+<div id="maintenanceModeMessage" style="display: none; background-color: var(--bg-color); color: var(--text-color); text-align: center; padding: 30px; border: 2px solid var(--accent-color); border-radius: 16px; box-shadow: 0 8px 20px var(--shadow-color); margin: 20px;">
+    <h2 style="color: var(--accent-color); font-family: 'Inter', sans-serif; font-size: 2em; margin-bottom: 20px;">We're Performing Some Upgrades!</h2>
+    <p style="font-family: 'Roboto', sans-serif; font-size: 1.2em; line-height: 1.6; margin-bottom: 20px;">
         Our website is currently undergoing scheduled maintenance to improve your experience. We’re making some big updates, so things will be smoother, faster, and even better when we're done.
     </p>
-    <p style="font-family: 'Roboto', sans-serif; font-size: 1.1em; line-height: 1.5; margin-bottom: 15px;">
+    <p style="font-family: 'Roboto', sans-serif; font-size: 1.2em; line-height: 1.6; margin-bottom: 20px;">
         During this time, certain features may be temporarily unavailable, and you might not be able to access all parts of the site. But don’t worry, we’re working hard to get everything back up and running as quickly as possible.
     </p>
-    <p style="font-family: 'Roboto', sans-serif; font-size: 1.1em; line-height: 1.5; margin-bottom: 15px;">
+    <p style="font-family: 'Roboto', sans-serif; font-size: 1.2em; line-height: 1.6; margin-bottom: 20px;">
         Please check back soon, or follow our social media pages for updates on when we’ll be live again. We appreciate your patience and can’t wait to show you what’s new!
     </p>
-    <p style="font-family: 'Roboto', sans-serif; font-size: 1.2em; font-weight: bold;">
+    <p style="font-family: 'Roboto', sans-serif; font-size: 1.3em; font-weight: bold;">
         Thank you for your understanding!
     </p>
 </div>
