--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
                 <h2>Instagram Creator Shoutouts</h2>
-                <p class="lastUpdatedInstagram"><span id="instagram-last-updated-timestamp">N/A</span></p>
+                <p id="lastUpdatedInstagram"></p>
             </div>
             <div class="instagram-creator-grid">
                 <!-- Instagram creator cards will be dynamically generated here -->
